--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,39 +1,53 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+name: Build
 
-name: Python application
+env:
+  PYTHON_VERSION: '3.10'
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+    
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    types: [review_requested]
 
 jobs:
+  specific_review_requested:
+    
+    runs-on: windows-latest
+    steps: 
+      - run: echo 'A review was requested from the devs'
+      
   build:
-
-    runs-on: ubuntu-latest
-
+  
+    runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v4
+      
+      - name: Set up Python ${{ env.PYTHON_VERSION }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+          cache: pip
+          cache-dependency-path: 'requirements.txt'
+            
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
+      - name: Install cx_Freeze
+        run: pip install cx_Freeze
+      
+      - name: Build Native Executable
+        run: python setup.py build
+      
+      - name: Get commit hash
+        id: commit
+        uses: pr-mpt/actions-commit-hash@v1
+      
+      - name: Upload Compiled Version
+        uses: actions/upload-artifact@v4
+        with:
+          name: VALORANT-rank-yoinker-${{ steps.commit.outputs.short }}
+          path: build/exe.win-amd64-${{ env.PYTHON_VERSION }}/**
